syntax = "proto3";

package app.miniboard.tokens.v1;

option go_package = "tokens";

service TokensService {
    // Create authorization token.
    //
    // Returns an authorization token.
    rpc CreateToken(CreateTokenRequest) returns (Token) {}
}

message CreateTokenRequest {
    string code = 1;
}

message Token {
    string token = 1;
}
