syntax = "proto3";

package app.miniboard.users.v1;

option go_package = "users";

service UsersService {
    // Get me
    //
    // Returns logged in user.
    rpc GetMe(GetMeRequest) returns (User) {}
}

message GetMeRequest {}

message User {
    // Name of the resource, for example "users/user1".
    string name = 1;
}
